--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,4 +3,6 @@
     <string name="guess_the_secret_number">Indovina il numero segreto!</string>
     <string name="btn_roll_the_dice">Lancia il dado!</string>
     <string name="btn_roll_toast">Il dado rotola!</string>
+    <string name="verify">Verifica se hai vinto!</string>
+    <string name="verify_toast">verificando...</string>
 </resources>
