--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="guess_the_secret_number">Guess the secret number!</string>
     <string name="btn_roll_the_dice">Roll the dice!</string>
     <string name="btn_roll_toast">The dice is rolling!</string>
+    <string name="verify">Check if you won!</string>
+    <string name="verify_toast">checking...</string>
 </resources>
